# navigation_teach

./: .gitignore  frames_2026-07-09_16.51.23.gv  main.tex  simple_test.tex  start_urdf_viz.sh  stop_urdf_viz.sh  机器人导航入门六日教学方案.md  机器人导航入门课程完整版.html  机器人导航入门课程完整版.md  机器人导航入门课程完整版.tex
day01_dev_tools/: README.md  check_env.sh
day01_dev_tools/demo/: config.yaml  expected_output.txt  hello_robot.py
day01_dev_tools/picture/: chatgpt-claude-and-gemini-logos-over-a-code-editor-with-some-blurred-code-written.avif
day02_nodes/: class1.md  class2.md  navigation_framework.md
day02_nodes/02node/my_cecond_package/: CMakeLists.txt  package.xml
day02_nodes/02node/my_cecond_package/src/: my_subscription.cpp
day02_nodes/02node/my_first_package/: CMakeLists.txt  package.xml
day02_nodes/02node/my_first_package/launch/: launch_nodes.launch.py
day02_nodes/02node/my_first_package/src/: helloworld.cpp
day02_nodes/02node/my_msgs/: CMakeLists.txt  package.xml
day02_nodes/02node/my_msgs/msg/: Sentry.msg
day02_nodes/02node/my_third_package/: CMakeLists.txt  package.xml
day02_nodes/02node/my_third_package/src/: only_sub.cpp
day03_tfandlocation/: class.md  frames_2026-07-09_10.18.43.gv  frames_2026-07-09_10.18.54.gv  frames_2026-07-09_10.19.40.gv  location.md  pcl.md
day03_tfandlocation/src/cloud/lidar/: CMakeLists.txt  package.xml
day03_tfandlocation/src/cloud/lidar/config/: display_all.rviz
day03_tfandlocation/src/cloud/lidar/launch/: display_all.launch.py
day03_tfandlocation/src/cloud/lidar/src/cloud/: lidar_node.cpp
day03_tfandlocation/src/my_tf/: CMakeLists.txt  package.xml
day03_tfandlocation/src/my_tf/launch/: display.launch.py
day03_tfandlocation/src/my_tf/rviz/: tf_demo.rviz
day03_tfandlocation/src/my_tf/scripts/: joint_state_pub.py
day03_tfandlocation/src/my_tf/src/: my_tf2_broadcaster.cpp
day03_tfandlocation/src/my_tf/urdf/: my_diffbot.urdf
day03_tfandlocation/src/small_point_lio/: BATCH_UPDATE_IMPLEMENTATION.md  CMakeLists.txt  README.md  gravity_alignment.md  metadata.yaml  package.xml
day03_tfandlocation/src/small_point_lio/config/: mid360.yaml  mid360_sim.yaml  unilidar_l2.yaml
day03_tfandlocation/src/small_point_lio/include/small_point_lio/: pch.h
day03_tfandlocation/src/small_point_lio/launch/: small_point_lio.launch.py
day03_tfandlocation/src/small_point_lio/src/: small_point_lio_node.cpp  small_point_lio_node.hpp
day03_tfandlocation/src/small_point_lio/src/common/: common.h
day03_tfandlocation/src/small_point_lio/src/lidar_adapter/: base_lidar.h  livox_lidar.h  unitree_lidar.h
day03_tfandlocation/src/small_point_lio/src/small_point_lio/: eskf.h  estimator.cpp  estimator.h  parameters.cpp  parameters.h  performance_timer.h  preprocess.cpp  preprocess.h  small_ivox.h  small_point_lio.cpp  small_point_lio.h  so3_math.h
day03_tfandlocation/src/small_point_lio/src/voxelgrid_sampling/: voxelgrid_sampling.cpp  voxelgrid_sampling.h
day04_map_planning/: README.md
day04_purepursuit/: 01.md  demo.sh
day04_purepursuit/src/pure_pursuit_rviz_demo/: CMakeLists.txt  package.xml
day04_purepursuit/src/pure_pursuit_rviz_demo/launch/: demo.launch.py
day04_purepursuit/src/pure_pursuit_rviz_demo/map/: map.pgm
day04_purepursuit/src/pure_pursuit_rviz_demo/rviz/: pure_pursuit_demo.rviz
day04_purepursuit/src/pure_pursuit_rviz_demo/scripts/: common.py  map_publisher  path_publisher  pure_pursuit_controller  virtual_robot
day04_purepursuit/src/pure_pursuit_rviz_demo/urdf/: simple_car.urdf
day05_control/: control_basics.md  path_tracking_and_controllers.md
day05_control/pure_pursuit_rviz_demo/: package.xml  setup.cfg  setup.py
day05_control/pure_pursuit_rviz_demo/launch/: demo.launch.py
day05_control/pure_pursuit_rviz_demo/pure_pursuit_rviz_demo/: common.py  path_publisher.py  pure_pursuit_controller.py  virtual_robot.py
day05_control/pure_pursuit_rviz_demo/rviz/: pure_pursuit_demo.rviz
day05_control/pure_pursuit_rviz_demo/urdf/: simple_car.urdf
day06_decision_communication/: communication.md  decision.md
